[package]
name = "team_stealer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
bytes = "1.7.2"
futures-core = "0.3.30"
futures-util = "0.3.30"
ndarray = "0.16.1"
ocrs = "0.8.1"
reqwest = "0.11.5"
rustube = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
url = "2.5.2"
video-rs = { version = "0.9.0", features = ["ndarray"] }
