[package]
name = "team_stealer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
image = "0.25.2"
indicatif = "0.17.11"
ocrs = "0.9.0"
opencv = "0.93.1"
rten = "0.13.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.40.0", features = ["full", "io-std", "io-util", "process"] }
