[package]
name = "team_stealer"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "=2.0.0-rc.9", features = ["ndarray", "tensorrt"] }
ort-sys = "=2.0.0-rc.9"
ndarray = "0.16.1"
dotenv = "0.15.0"
flume = "0.11.1"
futures = "0.3.31"
image = { version = "0.25.6", features = ["webp"] }
imageproc = "0.25.0"
indicatif = "0.18.0"
rten = "0.20.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "io-std", "io-util", "process"] }
once_cell = "1.21.3"
ollama-rs = "0.3.2"
base64 = "0.22.1"
